pre entrega terminada

--- a/pages/superiores.html
+++ b/pages/superiores.html
@@ -320,6 +320,9 @@
             <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
               <a href="https://www.youtube.com/"><img id="red1" src="../assets/img/Redes/Diseño sin título (2).webp" alt="imgyt"></a>
             </div>
+            <div>
+              <br>
+            </div>
             <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
               <a href="https://www.facebook.com/"><img id="red1" src="../assets/img/Redes/Diseño sin título (3).webp" alt="imgfc"></a>
             </div>
