--- a/pages/superiores.html
+++ b/pages/superiores.html
@@ -27,22 +27,19 @@
     
 
          <!-- Inicio Descuentos -->
-        <div class="fixed-top">
-         <div id="cabecera" class="row bg-secondary ">
-             <div id="envios" class="col d-flex justify-content-evenly fs-5">
-                 <p class="small">Envios gratis a partir de $37.000. <img id="imgenvios" src="../assets/img/items/Captura de pantalla 2023-07-04 151646.png" alt="imagenDelCamion"></p>
-             </div>
-             <div id="descuento" class="col d-flex justify-content-evenly fs-5">
-                 <p class="small">Hasta 6 cuotas sin interes. <img id="imgdescuentos" src="../assets/img/items/Captura de pantalla 2023-07-04 153702.png" alt="imagenDeLaTarjeta"></p>
-             </div>
-         </div>
+         <div class="fixed-top">
+          <div id="cabecera" class="row bg-black">
+              <div id="envios" class="col d-flex justify-content-evenly fs-5">
+                  <h6 class="text-light-emphasis">Envios GRATIS a todo el pais en todo el mes de octubre adquiriendo una prenda por mas de $21.999</h6>
+              </div>
+          </div>
          <!-- Final Descuentos -->
 
 
          <!-- Incio NavBar -->
          <div class="row">
              <div id="logo" class="col-xl-1 col-md-2" >
-                 <a href="../index.html"><img id="imglogo" src="../assets/img/logo/Captura de pantalla 2023-07-04 151646.png" alt="imagenDeLogo" ></a>
+                 <a href="../index.html"><img id="imglogo" src="../assets/img/logo/LogoNegro.jpg" alt="imagenDeLogo" ></a>
              </div>
              <nav class=" col-xl-11 navbar navbar-expand-lg bg-body-tertiary col-md-10">
                  <div class="container-fluid">
@@ -69,9 +66,6 @@
                        <li class="nav-item">
                              <a class="nav-link" href="#final">Help</a>
                            </li class>
-                           <li class="nav-item">
-                            <a class="nav-link" href="./carrito.html">Carrito</a>
-                          </li class>
                      </ul>
                    </div>
                  </div>
@@ -88,7 +82,7 @@
 
          <!-- Inicio Remeras -->
     <main id="mainDeSuperior" > 
-      <h3><small class="text-body-secondary d d-flex justify-content-center">Remeras</small></h3> <br>
+      <h1><small class="text-body-secondary d d-flex justify-content-center">Remeras</small></h1> <br>
         <section class="container">
             <div class="row">
                 <div class="col">
@@ -205,7 +199,7 @@
 
 
         <!-- Incio Buzos -->
-        <h3><small class="text-body-secondary d d-flex justify-content-center">Buzos</small></h3> <br>
+        <h2><small class="text-body-secondary d d-flex justify-content-center">Buzos</small></h2> <br>
         <section class="container">
           <div class="row">
 
@@ -299,35 +293,37 @@
 
     </main>
 
+    <br>
 
         <!-- Inicion Informacion -->
-    <div class="container-fluid">
-      <div class="row" id="contactosIndex">
-                <p class="bg-black d-flex justify-content-center align-items-center h-100">
-            <a href="../index.html"><img id="logocontactos" src="../assets/img/logo/Captura de pantalla 2023-07-04 151646.png" alt="imagenDeLogo"></a>
-             "The Vi-Bras": ¡Viste con estilo y vive vibrante! Descubre moda única y prendas que reflejen tu personalidad. Unete a nuestra comunidad. 
-        </p> 
-      </div>
+        <div class="container-fluid">
+          <div class="row" id="contactosIndex">
+                    <p class="bg-black d-flex justify-content-center align-items-center h-100 text-light bg-dark ">
+                <a href="../index.html"><img id="logocontactos" src="../assets/img/logo/LogoBlanco.jpg" alt="imagenDeLogo"></a>
+                 "The Vi-Bras": ¡Viste con estilo y vive vibrante! Descubre moda única y prendas que reflejen tu personalidad. Unete a nuestra comunidad. 
+            </p> 
+          </div>
+        </div>
        <!-- Final Informacion-->
 
 
          <!-- Incio Redes Sociales -->
-         <section class="container">
+          <section class="container ">
           <div class="row ">
-            <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
-              <a href="https://twitter.com/home"><img id="red1" src="../assets/img/Redes/Diseño sin título (1).webp" alt="imgtw"></a>
+            <div class="col-md-6 d-flex justify-content-center">
+              <a href="https://twitter.com/home"><img class="img-fluid zoom-img " id="red1" src="../assets/img/Redes/Diseño sin título (1).webp" alt="imgtw"></a>
             </div>
-            <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
-              <a href="https://www.youtube.com/"><img id="red1" src="../assets/img/Redes/Diseño sin título (2).webp" alt="imgyt"></a>
+            <div class="col-md-6  d-flex justify-content-center">
+              <a href="https://www.youtube.com/"><img class="img-fluid zoom-img"  id="red1" src="../assets/img/Redes/Diseño sin título (2).webp" alt="imgyt"></a>
             </div>
             <div>
               <br>
             </div>
-            <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
-              <a href="https://www.facebook.com/"><img id="red1" src="../assets/img/Redes/Diseño sin título (3).webp" alt="imgfc"></a>
+            <div class="col-md-6  d-flex justify-content-center">
+              <a class="" href="https://www.facebook.com/"><img class="img-fluid zoom-img" id="red1" src="../assets/img/Redes/Diseño sin título (3).webp" alt="imgfc"></a>
             </div>
-            <div class="col-md-6  d-flex justify-content-center  img-fluid zoom-img">
-              <a href="https://www.instagram.com/"><img id="red1" src="../assets/img/Redes/Diseño sin título.webp" alt="imgig"></a>
+            <div class="col-md-6  d-flex justify-content-center">
+              <a href="https://www.instagram.com/"><img class="img-fluid zoom-img" id="red1" src="../assets/img/Redes/Diseño sin título.webp" alt="imgig"></a>
             </div>
           </div>
          </section>
@@ -347,7 +343,7 @@
                     <p><a href="./inferiores.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Shop Inf</a></p>
                     <p><a href="./accesorios.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Accesorios</a></p>
                     <p><a href="./calzado.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Calzados</a></p>
-                    <p><a href="./carrito.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Carrito</a></p>
+                 
                     <p><a href="../index.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Inicio</a></p>
                 </div>
             </div>
