pagina casi terminada, ya se le aplico el responsive, solo faltan detalles minimos

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 
     <!-- Incio Descuentos -->
     <div class="fixed-top">
-     <div id="cabecera" class="row bg-black">
-         <div id="envios" class="col d-flex justify-content-evenly fs-5">
-             <h6 class="text-light-emphasis">Envios GRATIS a todo el pais en todo el mes de octubre adquiriendo una prenda por mas de $21.999</h6>
-         </div>
-     </div>
+      <div id="cabecera" class="row bg-black">
+          <div id="envios" class="col d-flex justify-content-evenly fs-5">
+              <h6 class="text-light-emphasis">Envios GRATIS a todo el pais en todo el mes de octubre adquiriendo una prenda por mas de $21.999.</h6>
+          </div>
+      </div>
      <!-- Final Descuentos -->
 
      <!-- Incio NavBar -->
      <div class="row">
-         <div id="logo" class="col-xl-1 col-md-2" >
+         <div id="logo" class="col-xxl-1 col-xl-1 col-md-2 col-3" >
              <a href="./index.html"><img id="imglogo" src="./assets/img/logo/LogoNegro.jpg" alt="imagenDeLogo" ></a>
          </div>
-         <nav class=" navbar navbar-expand-lg navbar-light bg-light custom-navbar col"  >
+         <nav class=" navbar navbar-expand-lg navbar-light bg-light custom-navbar col-xxl-11 col-xl-11  col-md-10 col-9"  >
              <div class="container-fluid">
                <a class="navbar-brand" href="./pages/new.html">New</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,6 +76,7 @@
  </header>
       <!-- Final NavBar -->
 
+      <div id="divisor"></div>
 
          <!-- Inicio Portada -->
     <main>
@@ -293,8 +294,8 @@
          <div id="hot">
           <h2 class="text-body-secondary d-flex justify-content-center border-bottom">Hot</h2> <br>
          <section class="container-fluid">
-          <div class="row">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade col">
+          <div class="row d-flex justify-content-center">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade col-5 ">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./assets/img/Hot/Hot1/522637-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
@@ -321,8 +322,11 @@
                   </div><br>
           </div>
 
+          <div class="col-1">
 
-          <div id="carouselExampleFade1" class="carousel slide carousel-fade col ">
+          </div>
+
+          <div id="carouselExampleFade1" class="carousel slide carousel-fade col-5  ">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./assets/img/Hot/Hot2/498972-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
@@ -358,14 +362,14 @@
          
          <!-- Inicion Informacion -->
 
-    <div class="container-fluid">
-      <div class="row" id="contactosIndex">
-                <p class="bg-black d-flex justify-content-center align-items-center h-100 text-light bg-dark ">
-            <a href="./index.html"><img id="logocontactos" src="./assets/img/logo/LogoBlanco.jpg" alt="imagenDeLogo"></a>
-             "The Vi-Bras": ¡Viste con estilo y vive vibrante! Descubre moda única y prendas que reflejen tu personalidad. Unete a nuestra comunidad. 
-        </p> 
-      </div>
-    </div>
+         <div class="container-fluid">
+          <div class="row" id="contactosIndex">
+                    <p class="bg-black d-flex justify-content-center align-items-center h-100 text-light bg-dark text-center">
+                <a href="./index.html"><img id="logocontactos" src="./assets/img/logo/LogoBlanco.jpg" alt="imagenDeLogo"></a>
+                 "The Vi-Bras": ¡Viste con estilo y vive vibrante! Descubre moda única y prendas que reflejen tu personalidad. Unete a nuestra comunidad. 
+            </p> 
+          </div>
+        </div>
 
          <!-- Final Informacion-->
 
@@ -373,19 +377,19 @@
          <!-- Incio Redes Sociales -->
          <section class="container ">
           <div class="row ">
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-md-6 col-6 d-flex justify-content-center">
               <a href="https://twitter.com/home"><img class="img-fluid zoom-img " id="red1" src="./assets/img/Redes/Diseño sin título (1).webp" alt="imgtw"></a>
             </div>
-            <div class="col-md-6  d-flex justify-content-center">
+            <div class="col-md-6 col-6 d-flex justify-content-center">
               <a href="https://www.youtube.com/"><img class="img-fluid zoom-img"  id="red1" src="./assets/img/Redes/Diseño sin título (2).webp" alt="imgyt"></a>
             </div>
             <div>
               <br>
             </div>
-            <div class="col-md-6  d-flex justify-content-center">
+            <div class="col-md-6 col-6 d-flex justify-content-center">
               <a class="" href="https://www.facebook.com/"><img class="img-fluid zoom-img" id="red1" src="./assets/img/Redes/Diseño sin título (3).webp" alt="imgfc"></a>
             </div>
-            <div class="col-md-6  d-flex justify-content-center">
+            <div class="col-md-6 col-6 d-flex justify-content-center">
               <a href="https://www.instagram.com/"><img class="img-fluid zoom-img" id="red1" src="./assets/img/Redes/Diseño sin título.webp" alt="imgig"></a>
             </div>
           </div>
@@ -398,7 +402,7 @@
          
          <!-- Incio Contenido -->
     <section id="contactos" class="container">
-        <div class="row"><div class="col-xl-6 col-md-3">
+        <div class="row"><div class="col-xl-6 col-md-3 col-3">
             <h5>Menú</h5>
                 <div class="d-flex flex-column mb-3 justify-content-end ">
                     <p><a href="./pages/new.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">New</a></p>
@@ -409,7 +413,7 @@
                     <p><a href="./index.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Inicio</a></p>
                 </div>
             </div>
-            <div class="col-xl-6 col-md-9">
+            <div class="col-xl-6 col-md-9 col-9">
                 <dl class="row">
                     <a id="final" href=""></a>
                     <h6 class="blockquote">Contáctanos</h6>
