agg icons y un par de cositas mas

--- a/pages/new.html
+++ b/pages/new.html
@@ -10,6 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./assets/img/icons/Icon.ico">
     <title>New</title>
     <style>
       .zoom-img {
@@ -86,7 +87,7 @@
     <main id="mainNew">
         <section id="newtemporada" class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-xl-3 col-md-3 col-6">
                 <div id="carouselExampleFade1" class="carousel slide carousel-fade img-fluid zoom-img">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -113,7 +114,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-6">
+            <div class="col-xl-3 col-md-3 col-6">
                 <div id="carouselExampleFade2" class="carousel slide carousel-fade img-fluid zoom-img">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -140,7 +141,8 @@
                     </div>
                   </div>
             </div> 
-            <div class="col-6">
+
+            <div class="col-xl-3 col-md-3 col-6">
               <div id="carouselExampleFade4" class="carousel slide carousel-fade img-fluid zoom-img">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -167,7 +169,7 @@
                   </div>
                 </div>
           </div>
-            <div class="col-6">
+            <div class="col-xl-3 col-md-3 col-6">
                 <div id="carouselExampleFade3" class="carousel slide carousel-fade img-fluid zoom-img">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
