--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,6 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./assets/img/icons/Icon.ico">
     <title>Accesorios</title>
     <style>
       .zoom-img {
