--- a/pages/superiores.html
+++ b/pages/superiores.html
@@ -10,6 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./assets/img/icons/Icon.ico">
     <title>Shop Superiores</title>
     <style>
       .zoom-img {
@@ -82,7 +83,7 @@
 
          <!-- Inicio Remeras -->
     <main id="mainDeSuperior" > 
-      <h1><small class="text-body-secondary d d-flex justify-content-center">Remeras</small></h1> <br>
+      <h1><small class="text-body-secondary d-flex justify-content-center">Remeras</small></h1> <br>
         <section class="container">
             <div class="row">
                 <div class="col">
