--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,7 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="./assets/img/icons/Icon.ico">
+    <link rel="icon" href="../assets/img/icons/Icon.ico">
     <title>Accesorios</title>
     <style>
       .zoom-img {
@@ -73,7 +73,10 @@
        </div>
       </div>
          <!-- Final NavBar -->
+
+         
     </header>
+
 
          <!-- Incio Accesorios-->
     <div id="divisor"></div>
@@ -183,8 +186,8 @@
                         <span class="visually-hidden">Next</span>
                       </button> <br>
                       <h6 class="lead">NAB Socks Black</h6>
-              <h6 class="fw-bold">$481.67</h6>
-              <p class="text-danger small"><strong>6 cuotas sin interes de $3.165,00</strong></p>
+              <h6 class="fw-bold">$3.690</h6>
+              <p class="text-danger small"><strong>6 cuotas sin interes de $615,00</strong></p>
               <div class="btn-group d-flex justify-content-center">
                  <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
                  <a href="#" class="btn btn-dark">Ver</a>
@@ -196,7 +199,9 @@
   </main>
        <!-- Final Accesorios -->
 
+
        <br>
+
 
        <!-- Inicion Informacion -->
     <div class="container-fluid">
