--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -9,7 +9,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="./assets/img/icons/Icon.ico">
+    <link rel="icon" href="../assets/img/icons/Icon.ico">
     <title>Calzados</title>
     <style>
       .zoom-img {
@@ -34,6 +34,7 @@
           </div>
          <!-- Final Descuentos -->
 
+         
          <!-- Incio NavBar -->
          <div class="row">
           <div id="logo" class="col-xl-1 col-xl-1 col-md-2 col-3" >
