--- a/pages/inferiores.html
+++ b/pages/inferiores.html
@@ -10,7 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="./assets/img/icons/Icon.ico">
+    <link rel="icon" href="../assets/img/icons/Icon.ico">
     <title>Shop Inferiores</title>
     <style>
       .zoom-img {
@@ -74,6 +74,7 @@
        </div>
       </div>
         <!-- Final NavBar -->
+
 
   </header>
 
@@ -211,8 +212,10 @@
     </main>
     <!-- Final Pantalones -->
 
+
     <br>
 
+    
     <!-- Inicion Informacion -->
     <div class="container-fluid">
       <div class="row" id="contactosIndex">
