--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[The Vi-Bras] Las prendas mas originales y nuevas del mercado encontralas aquí.">
+    <meta name="description" content="[The Vi-Bras] ¿Queres saber quienes somos? Aca encontraras todas las respuestas.">
     <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>New</title>
-    <style>
-      .zoom-img {
-        transition: transform 0.3s;
-      }
-      .zoom-img:hover {
-        transform: scale(1.03);
-      }
-    </style>
+    <link rel="icon" href="../assets/img/icons/Icon.ico">
+    <title>Sobre Nosotros</title>
 </head>
 
 <body class="bg-black">
@@ -37,7 +30,7 @@
           </div>
         
           <div>
-            <img id="nosotrosimg" class="d-flex align-items-center col-xxl-6 col-12" src="../assets/img/portada/norbert1-buduczki-NJ-U7-eiEFQ-unsplash.jpg" alt=""> <br>
+            <img id="nosotrosimg" class="d-flex align-items-center col-xxl-6 col-12" src="../assets/img/portada/norbert1-buduczki-NJ-U7-eiEFQ-unsplash.jpg" alt="portadaSobreNosotros"> <br>
             <p class="text-center text-light col-12">
                 Creemos en la importancia de vestir con confianza y comodidad. Por eso, seleccionamos cuidadosamente cada prenda de nuestra colección para asegurarnos de que cumpla con los estándares más exigentes de calidad y estilo. Trabajamos con marcas reconocidas y diseñadores talentosos que comparten nuestra visión de ofrecer ropa de primera calidad.
             </p>
@@ -46,7 +39,7 @@
         
           <div class="text-center text-light col-md-12 col-12">
             <p>
-                En The Vi-Bras, creemos en el poder de la moda para expresar tu individualidad y resaltar tu personalidad. Nuestra misión es ayudarte a encontrar prendas que te hagan sentir seguro(a), cómodo(a) y auténtico(a). Ya sea que busques un estilo elegante y sofisticado o un aspecto relajado y casual, estamos aquí para ayudarte a descubrir tu propio estilo único.Agradecemos tu confianza en [nombre de la marca]. Nos comprometemos a brindarte una experiencia de compra excepcional, con atención personalizada y un servicio al cliente atento. Siempre nos esforzamos por superar tus expectativas y asegurarnos de que te sientas satisfecho(a) con cada compra que realices.
+                En The Vi-Bras, creemos en el poder de la moda para expresar tu individualidad y resaltar tu personalidad. Nuestra misión es ayudarte a encontrar prendas que te hagan sentir seguro, cómodoy auténtico. Ya sea que busques un estilo elegante y sofisticado o un aspecto relajado y casual, estamos aquí para ayudarte a descubrir tu propio estilo único.Agradecemos tu confianza en [The Vi - Bras]. Nos comprometemos a brindarte una experiencia de compra excepcional, con atención personalizada y un servicio al cliente atento. Siempre nos esforzamos por superar tus expectativas y asegurarnos de que te sientas satisfecho(a) con cada compra que realices.
 
             </p>
           </div>
