--- a/pages/superiores.html
+++ b/pages/superiores.html
@@ -10,7 +10,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="./assets/img/icons/Icon.ico">
+    <link rel="icon" href="../assets/img/icons/Icon.ico">
     <title>Shop Superiores</title>
     <style>
       .zoom-img {
@@ -207,13 +207,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide col" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_041-aa8c16a5e54bfdae4d16856663689427-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_041-aa8c16a5e54bfdae4d16856663689427-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_1">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_061-a71d50cce558df8cc216856663693849-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_061-a71d50cce558df8cc216856663693849-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_2">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_071-02ea521e4f614962d416856663689519-640-0.webp" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-xs-negro_071-02ea521e4f614962d416856663689519-640-0.webp" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos1_3">
                 </div>
               </div><br>
               <h6 class="lead">Buzo Negro Old</h6>
@@ -228,13 +228,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide col" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_051-4cebf9913e59ebfe1e16890870836093-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_  ">
+                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_051-4cebf9913e59ebfe1e16890870836093-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_1">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_0311-b5f94450179cf9079d16890870838062-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_0311-b5f94450179cf9079d16890870838062-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_2">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_071-785539f6c1da49868a16890870835278-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-hyper_reality-negro_071-785539f6c1da49868a16890870835278-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos2_3">
                 </div>    
               </div><br>
               <h6 class="lead">Buzo Stamp</h6>
@@ -249,13 +249,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide col" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_021-181c073a9b1fe2f9ee16885858717544-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_021-181c073a9b1fe2f9ee16885858717544-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_1">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_031-976eaa6a2995fe148d16885858717816-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_031-976eaa6a2995fe148d16885858717816-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_2">
                 </div>
                 <div class="carousel-item">
-                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_041-f1164055faab5a545616885858724282-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_">
+                  <img src="../assets/img/Superior/Buzos/_buzo-iceworld-blanco_041-f1164055faab5a545616885858724282-640-0.jpg" class="d-block w-100 img-fluid zoom-img" alt="imgBuzos3_3">
                 </div>
               </div><br>
               <h6 class="lead">Buzo Unlimited</h6>
