--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <header class="container-fluid fixed-top">
 
+
     <!-- Incio Descuentos -->
     <div class="fixed-top">
       <div id="cabecera" class="row bg-black">
@@ -34,6 +35,7 @@
           </div>
       </div>
      <!-- Final Descuentos -->
+
 
      <!-- Incio NavBar -->
      <div class="row">
@@ -75,15 +77,16 @@
 
 
  </header>
-      <!-- Final NavBar -->
-
       <div id="divisor"></div>
+
 
          <!-- Inicio Portada -->
     <main>
         <img id="portada" src="./assets/img/portada/Logo1.png" alt="imagenPortada">
     </main><br>
          <!-- Final Portada -->
+
+
 
          <!-- Incio Destacados  -->
        <div id="destacados">
@@ -299,10 +302,10 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade col-5 ">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/Hot/Hot1/522637-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
+                <img src="./assets/img/Hot/Hot1/522637-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="imgHot1_1">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/Hot/Hot1/525103-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
+                <img src="./assets/img/Hot/Hot1/525103-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="imgHot1_2">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -330,10 +333,10 @@
           <div id="carouselExampleFade1" class="carousel slide carousel-fade col-5  ">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/Hot/Hot2/498972-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
+                <img src="./assets/img/Hot/Hot2/498972-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="imgHot2_1">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/Hot/Hot2/503335-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="...">
+                <img src="./assets/img/Hot/Hot2/503335-800-800.webp" class="d-block w-100 mg-fluid zoom-img" alt="imgHot2_2">
               </div>
             </div>
             <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade1" data-bs-slide="prev">
@@ -347,7 +350,7 @@
             <br>
                   <h6 class="lead">Air Force one</h6>
                   <h6 class="fw-bold"><s class="text-secondary">$71.990</s>    $62.990</h6>
-                  <p class="text-danger small"><strong>6 cuotas sin interes de $11.998,33</strong></p>
+                  <p class="text-danger small"><strong>6 cuotas sin interes de $10.498,33</strong></p>
                   <div class="btn-group d-flex justify-content-center">
                     <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
                     <a href="#" class="btn btn-dark">Ver</a>
@@ -358,6 +361,7 @@
          </section>
 
          </div> <br>
+
          <!-- Final Hot  -->
 
          
