--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <h6 class="fw-bold">$71.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $11.998,33</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active border-0" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active border-0" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark ">Ver</a>
                   </div> <br>
             </div>
@@ -188,7 +188,7 @@
                   <h6 class="fw-bold">$55.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $9.331,66</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div><br>
             </div>
@@ -236,7 +236,7 @@
                   <h6 class="fw-bold">$15.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $2.650,00</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div><br>
             </div>
@@ -284,7 +284,7 @@
                   <h6 class="fw-bold">$96.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $16.165,00</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div>
             </div>
@@ -321,7 +321,7 @@
                   <h6 class="fw-bold"><s class="text-secondary">$23.990</s>    $19.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $3.331,66</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div><br>
           </div>
@@ -352,7 +352,7 @@
                   <h6 class="fw-bold"><s class="text-secondary">$71.990</s>    $62.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $10.498,33</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div><br>
            </div>
