--- a/pages/new.html
+++ b/pages/new.html
@@ -109,7 +109,7 @@
                     <h6 class="fw-bold">$29.990</h6>
                     <p class="text-danger small"><strong>6 cuotas sin interes de $4.998,33</strong></p>
                     <div class="btn-group d-flex justify-content-center">
-                      <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                      <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                       <a href="#" class="btn btn-dark">Ver</a>
                     </div>
                   </div>
@@ -136,7 +136,7 @@
                     <h6 class="fw-bold">$13.990</h6>
                     <p class="text-danger small"><strong>6 cuotas sin interes de $2.331,66</strong></p>
                     <div class="btn-group d-flex justify-content-center">
-                      <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                      <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                       <a href="#" class="btn btn-dark">Ver</a>
                     </div>
                   </div>
@@ -164,7 +164,7 @@
                   <h6 class="fw-bold">$44.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $7.483,33</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                    <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                    <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                   </div>
                 </div>
@@ -191,7 +191,7 @@
                     <h6 class="fw-bold">$21.990</h6>
                     <p class="text-danger small"><strong>6 cuotas sin interes de $3.650,00</strong></p>
                     <div class="btn-group d-flex justify-content-center">
-                      <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                      <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                       <a href="#" class="btn btn-dark">Ver</a>
                     </div>
                   </div>
