--- a/pages/superiores.html
+++ b/pages/superiores.html
@@ -108,7 +108,7 @@
                         <h6 class="fw-bold">$15.990</h6>
                         <p class="text-danger small"><strong>6 cuotas sin interes de $2.665,00</strong></p>
                         <div class="btn-group d-flex justify-content-center">
-                          <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                          <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                           <a href="#" class="btn btn-dark">Ver</a>
                         </div>
                       </div>
@@ -135,7 +135,7 @@
                         <h6 class="fw-bold">$12.990</h6>
                         <p class="text-danger small"><strong>6 cuotas sin interes de $2.150,00</strong></p>
                         <div class="btn-group d-flex justify-content-center">
-                          <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                          <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                           <a href="#" class="btn btn-dark">Ver</a>
                         </div>
                       </div>
@@ -162,7 +162,7 @@
                         <h6 class="fw-bold">$10.000</h6>
                         <p class="text-danger small"><strong>6 cuotas sin interes de $1.666,66</strong></Ep>
                         <div class="btn-group d-flex justify-content-center">
-                          <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                          <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                           <a href="#" class="btn btn-dark">Ver</a>
                         </div>
                       </div>
@@ -189,7 +189,7 @@
                         <h6 class="fw-bold">$15.990</h6>
                         <p class="text-danger small"><strong>6 cuotas sin interes de $2.665,00</strong></p>
                         <div class="btn-group d-flex justify-content-center">
-                          <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                          <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                           <a href="#" class="btn btn-dark">Ver</a>
                         </div>
                       </div>
@@ -220,7 +220,7 @@
                 <h6 class="fw-bold">$22.990</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $3.931,66</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                  <h6 class="fw-bold">$22.990</h6>
                   <p class="text-danger small"><strong>6 cuotas sin interes de $3.931,66</strong></p>
                   <div class="btn-group d-flex justify-content-center">
-                     <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                     <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                     <a href="#" class="btn btn-dark">Ver</a>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                 <h6 class="fw-bold">$22.990</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $3.931,66</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                  <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                  <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                   <a href="#" class="btn btn-dark">Ver</a>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                 <h6 class="fw-bold">$22.990</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $3.931,66</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
             </div>
