--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -108,7 +108,7 @@
                       <h6 class="fw-bold">$2.590</h6>
                       <p class="text-danger small"><strong>6 cuotas sin interes de $431,67</strong></p>
                       <div class="btn-group d-flex justify-content-center">
-                         <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                         <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                          <a href="#" class="btn btn-dark">Ver</a>
                        </div>
                     </div>
@@ -135,7 +135,7 @@
               <h6 class="fw-bold">$2.590</h6>
               <p class="text-danger small"><strong>6 cuotas sin interes de $431,67</strong></p>
               <div class="btn-group d-flex justify-content-center">
-                 <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                 <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                  <a href="#" class="btn btn-dark">Ver</a>
                </div>
                     </div>
@@ -162,7 +162,7 @@
               <h6 class="fw-bold">$21.990</h6>
               <p class="text-danger small"><strong>6 cuotas sin interes de $3.665,00</strong></p>
               <div class="btn-group d-flex justify-content-center">
-                 <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                 <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                  <a href="#" class="btn btn-dark">Ver</a>
                </div>
                     </div>
@@ -189,7 +189,7 @@
               <h6 class="fw-bold">$3.690</h6>
               <p class="text-danger small"><strong>6 cuotas sin interes de $615,00</strong></p>
               <div class="btn-group d-flex justify-content-center">
-                 <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                 <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                  <a href="#" class="btn btn-dark">Ver</a>
                </div>
                     </div>
