--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -109,7 +109,7 @@
                 <h6 class="fw-bold">$69.999</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $11.666,50</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
                       </div>
@@ -140,7 +140,7 @@
                 <h6 class="fw-bold">$77.999</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $19.333,19</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
                       </div>
@@ -171,12 +171,13 @@
                 <h6 class="fw-bold">$69.999</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $11.666,50</strong></p>
                 <div class="border-0 btn-group d-flex justify-content-center ">
-                   <a href="#" class="btn btn-dark active " aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active " aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark ">Ver</a>
                  </div>
                     </div>
               </div>
             </div>
+        </div>
           </section>
         </main>
          <!-- Final Calzado -->
