--- a/pages/inferiores.html
+++ b/pages/inferiores.html
@@ -112,7 +112,7 @@
                         <h6 class="fw-bold">$29.990</h6>
                         <p class="text-danger small"><strong>6 cuotas sin interes de $4.998,33</strong></p>
                         <div class="btn-group d-flex justify-content-center">
-                           <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                           <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                            <a href="#" class="btn btn-dark">Ver</a>
                          </div>
                       </div>
@@ -142,7 +142,7 @@
                 <h6 class="fw-bold">$17.990</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $2.983,33</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
                       </div>
@@ -172,7 +172,7 @@
                 <h6 class="fw-bold">$20.000</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $3.333,33</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
                       </div>
@@ -202,7 +202,7 @@
                 <h6 class="fw-bold">$18.990</h6>
                 <p class="text-danger small"><strong>6 cuotas sin interes de $3.165,00</strong></p>
                 <div class="btn-group d-flex justify-content-center">
-                   <a href="#" class="btn btn-dark active" aria-current="page">Comprar</a>
+                   <a href="#" class="btn btn-dark active" aria-current="page">Agregar al carrito</a>
                    <a href="#" class="btn btn-dark">Ver</a>
                  </div>
                       </div>
